# OpenMPTest

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/tom/openmptest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/tom/openmptest/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/tom/openmptest/: ExampleUnitTest.java
usingopenmp/: CMakeLists.txt  build.gradle
usingopenmp/src/androidTest/java/com/tom/usingopenmp/: ExampleInstrumentedTest.java
usingopenmp/src/main/: AndroidManifest.xml
usingopenmp/src/main/cpp/: native-lib.cpp  trace_log.h  trace_time.h
usingopenmp/src/main/java/com/tom/usingopenmp/: OpenMPTest.java
usingopenmp/src/main/res/values/: strings.xml
usingopenmp/src/test/java/com/tom/usingopenmp/: ExampleUnitTest.java
